--- a/setup.env
+++ b/setup.env
@@ -42,3 +42,4 @@ cmake -S llvm -B build -G "Unix Makefiles" -DLLVM_ENABLE_PROJECTS='clang;lld' -D
 cd build
 cmake --build .
 
+# TODO: vulkan, sdl2, glm
