--- a/src_vk/CMakeLists.txt
+++ b/src_vk/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp HelloTriangleApplication.h HelloTriangleApplication.cpp)
 
 set(PROJECT_NAME ${PROJECT_NAME}_vk)
 
