--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,4 @@ project(${PROJECT_NAME} VERSION 0.0.1 DESCRIPTION "C++ Basic Reactive Concepts" 
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/bin)
 
-add_subdirectory(src_physx)
-add_subdirectory(src_vk)
-add_subdirectory(src_sdl)
+add_subdirectory(src)
