--- a/src/vk/CMakeLists.txt
+++ b/src/vk/CMakeLists.txt
@@ -2,8 +2,10 @@ set(SOURCE_FILES main.cpp HelloTriangleApplication.h HelloTriangleApplication.cp
 
 set(PROJECT_NAME ${PROJECT_NAME}_vk)
 
-include_directories(${VULKAN_SDK}/include)
-link_directories(${VULKAN_SDK}/include)
+#include_directories(${VULKAN_SDK}/include)
+#link_directories(${VULKAN_SDK}/include)
+
+find_package(Vulkan)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
