--- a/src/sdl/CMakeLists.txt
+++ b/src/sdl/CMakeLists.txt
@@ -1,9 +1,15 @@
 set(SOURCE_FILES main.cpp vk_extern.cpp vk_extern.h vk_function.cpp vk_function.h)
-
 set(PROJECT_NAME ${PROJECT_NAME}_sdl)
+# set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")
+# set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall")
+
 
 # Vulkan
 find_package(Vulkan)
+
+include_directories(${Vulkan_INCLUDE_DIRS})
+
+link_directories(${Vulkan_INCLUDE_DIRS})
 
 if (WIN32)
     find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
@@ -26,4 +32,4 @@ endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2)
 
 # Vulkan
-target_link_libraries(${PROJECT_NAME} PRIVATE vulkan)
+target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
