--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(physx)
 add_subdirectory(sdl)
-add_subdirectory(vk)
+
+add_subdirectory(vk_sdl_test_1)
+add_subdirectory(vk_sdl_test_2)
