--- a/src/sdl/CMakeLists.txt
+++ b/src/sdl/CMakeLists.txt
@@ -13,7 +13,7 @@ if (WIN32)
     find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
 endif()
 
-find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
+find_package(SDL2 REQUIRED CONFIG COMPONENTS SDL2)
 
 if(WIN32)
     add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
