--- a/src/vk_sdl_test_2/CMakeLists.txt
+++ b/src/vk_sdl_test_2/CMakeLists.txt
@@ -11,6 +11,8 @@ endif()
 
 find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
 
+find_package(glm REQUIRED)
+
 if(WIN32)
     add_executable(${PROJECT_NAME} ${SOURCE_FILES})
     set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "")
@@ -27,3 +29,6 @@ endif()
 
 # Vulkan
 target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
+
+# GLM
+target_link_libraries(${PROJECT_NAME} PRIVATE glm::glm)
