--- a/src/vk_sdl_test_2/CMakeLists.txt
+++ b/src/vk_sdl_test_2/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCE_FILES main.cpp)
 
 set(PROJECT_NAME ${PROJECT_NAME}_vk_sdl_test_2)
-set(CMAKE_PREFIX_PATH "C:/glm/cmake/glm")
 
+if(WIN32)
+set(CMAKE_PREFIX_PATH "C:/glm/cmake/glm")
+endif()
 # Vulkan
 find_package(Vulkan)
 
