--- a/src/vk_sdl_test_2/CMakeLists.txt
+++ b/src/vk_sdl_test_2/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 
 find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
 
-find_package(glm REQUIRED)
+#find_package(glm REQUIRED)
 
 if(WIN32)
     add_executable(${PROJECT_NAME} ${SOURCE_FILES})
@@ -31,4 +31,4 @@ endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
 
 # GLM
-target_link_libraries(${PROJECT_NAME} PRIVATE glm::glm)
+#target_link_libraries(${PROJECT_NAME} PRIVATE glm::glm)
