--- a/src/physx/CMakeLists.txt
+++ b/src/physx/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(SOURCE_FILES main.cpp foo1.h foo2.h)
+set(SOURCE_FILES main.cpp)
 
-set(PROJECT_NAME ${PROJECT_NAME}_physx)
+cmake_path(GET CMAKE_CURRENT_SOURCE_DIR FILENAME PROJECT_NAME)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
