change-dir-name-to-third_party

--- a/triangle/CMakeLists.txt
+++ b/triangle/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(${PROJECT_NAME}
         triangle.cpp
         )
 
-target_include_directories(${PROJECT_NAME} PRIVATE include)
+target_include_directories(${PROJECT_NAME} PRIVATE third_party)
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
